fixed page about

--- a/sunline/about/templates/about/about.html
+++ b/sunline/about/templates/about/about.html
@@ -10,21 +10,65 @@
     </div>
     <div class="about__content">
       <div class="container">
-        <h3 class="about__title">Balance in the simple through an informed marriage of design, functional and craft</h3>
+        <h3 class="about__title">Hello, With 25+ Years Of Experience</h3>
         <div class="about__text">
           <p>Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock chillwave literally post-ironic ramps subway tile kitsch. Shaman tumblr fixie echo park street art. Enamel pin vaporware wayfarers, organic succulents hella sustainable cardigan.</p>
           <p>Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn tilde distillery pork belly single-origin coffee tumblr quinoa copper mug. Affogato cold-pressed unicorn, viral intelligentsia leggings raw denim kombucha tote bag messenger bag chambray vape coloring book scenester. Activated charcoal wayfarers church-key tote bag synth brunch. Retro cornhole</p>
         </div>
       </div>
     </div>
-    <div class="about__popup">
-      <a class="about__popup-play" data-fancybox href="https://youtu.be/1WuifmHhojE"><img src="{% static 'deps/icons/play-button.svg' %} " alt="" /></a>
+  </section>
+  <section class="about-service">
+    <div class="container">
+      <h3 class="about-service__title">
+        We Are Proud To Provide The Best Service For Customers
+      </h3>
+      <div class="about-service__items">
+        <div class="about-service__item">
+          <p class="about-service__item-text">
+            consectetur adipiscing elit, sed eiusmod tempor incididunt ut 
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+            nostrud exercitation ullamco laboris nisi ut aliquip 
+            commodo consequat. Duis aute irure dolor in 
+            reprehenderit in voluptate velit.
+          </p>
+          <h5 class="about-service__item-title">
+            Our History
+          </h5>
+          <p class="about-service__item-text">
+            We must explain to you how all this mistaken idea of denouncing 
+            pleasure and praising paint was born and I will give you 
+            acomplete account of the system, and expound actual 
+            teachings of the great explorer of the truth, the 
+            master-builder of human happiness.
+          </p>
+          <h5 class="about-service__item-title">
+            Operations
+          </h5>
+          <p class="about-service__item-text">
+            Accusamus et iusto odio dignissimos ducimus qui blanditiis 
+            praesentium voluptatum deleniti atque corrupti quos dolores 
+            et quasa molestias excepturi sint occaecati cupiditate 
+            provident, similique sunt in culpa qui officia deserunt mollitia animi,
+          </p>
+          <div class="about-service__sig">
+            <img src=" {% static 'deps/images/sig.png' %} " alt="">
+            <p class="about-service__sig-name">
+              James Smith
+              <span>CEO</span>
+            </p>
+          </div>
+        </div>
+        <div class="about-service__item">
+          <img src=" {% static 'deps/images/about-1_1.webp' %} " alt="">
+        </div>
+      </div>
     </div>
   </section>
   <section class="works">
     <div class="works__items">
       <div class="works__item">
-        <img class="works__item-img" src="{% static 'deps/images/about_works.jpg' %} " alt="" />
+        <img class="works__item-img" src="{% static 'deps/images/about-2.webp' %} " alt="" />
       </div>
       <div class="works__item">
         <h4 class="works__title">HOW WE WORKS</h4>
