--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -120,19 +120,18 @@ body {
   color: #F94073;
 }
 
-.submenu__items-title {
+.submenu__item {
   font-size: 24px;
   color: #2d3054;
   font-family: Bubblegum Sans, cursive;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   display: block;
 }
 
-.submenu__item-link,
-.submenu__items-title {
-  border-bottom: 1px solid #000;
+.submenu__link,
+.submenu__item {
   padding: 10px 20px;
-  background-color: #eee;
+  background-color: #fff;
   display: block;
   z-index: 5;
 }
@@ -153,7 +152,8 @@ body {
   visibility: hidden;
   opacity: 0;
   display: flex;
-  align-items: flex-start;
+  flex-direction: column;
+  /* align-items: flex-start; */
 }
 
 
@@ -211,7 +211,7 @@ body {
 .footer__links-title,
 .footer-newsletter__title {
   margin-bottom: 22px;
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   color: #fff;
   font-size: 26px;
   line-height: 28px;
@@ -250,7 +250,7 @@ body {
 
 .footer__contact-call__phone {
   color: #dc3545;
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   font-size: 24px;
   line-height: 28px;
 }
@@ -1158,7 +1158,30 @@ body {
   align-items: center;
 }
 
-.product-item {
+.filter__item-title {
+  display: block;
+  color: #2d3054;
+  font-size: 21px;
+  margin: 0;
+  line-height: 22px;
+  padding: 17px 30px;
+  border-bottom: 1px solid #eeeeee;
+  position: relative;
+  font-family: Bubblegum Sans, cursive;
+  margin-bottom: 20px;
+}
+
+.filter-btn {
+  display: inline-block;
+  padding: 10px 38px;
+  border-radius: 22px;
+  background-color: #F94073;
+  color: #fff;
+  border: none;
+  transition: .4s;
+}
+
+/* .product-item {
   max-width: 370px;
   text-align: center;
 }
@@ -1168,9 +1191,9 @@ body {
   height: 370px;
   overflow: hidden;
   margin-bottom: 25px;
-}
+} */
 
-.product-item__images {
+/* .product-item__images {
   -o-object-fit: cover;
   object-fit: cover;
 }
@@ -1178,7 +1201,7 @@ body {
 .product-item__images img {
   max-width: 100%;
   display: block;
-}
+} */
 
 .product-item__link-box {
   position: absolute;
@@ -1203,7 +1226,7 @@ body {
   line-height: 26px;
 }
 
-.product-item__title {
+/* .product-item__title {
   color: #29282d;
   padding: 15px 0 20px;
 }
@@ -1216,7 +1239,7 @@ body {
 .product-item__new-price {
   padding: 0 12px;
   color: #29282d;
-}
+} */
 
 .product-item__old-price {
   padding: 0 12px;
@@ -1304,6 +1327,98 @@ body {
 
 /*========= single product========== */
 
+.single-product-tabs {
+  margin: 88px 0 34px;
+}
+
+.single-product__inner {
+  display: flex;
+}
+
+.single-product__title {
+  font-family: Bubblegum Sans, cursive;
+  margin: 0 0 10px;
+  font-size: 246.153%;
+  font-weight: 500;
+  color: #2d3054;
+  line-height: 40px;
+}
+
+.single-product__price-box {
+  margin: 0 0 15px;
+  background: #f4ece2;
+  padding: 15px 20px;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
+.single-product__price {
+  color: #F94073;
+  font-size: 20px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.single-product-btn {
+  background: #F94073;
+  color: #fff;
+  border-radius: 23px;
+  border: none;
+  font-weight: 500;
+  text-transform: unset;
+  transition: 1s;
+  box-shadow: inset 0 0 #ffffff1a;
+  padding: 0;
+  text-transform: capitalize;
+  width: 200px;
+  padding: 10px 18px;
+  cursor: pointer;
+
+}
+
+.single-product-tabs__container {
+  display: block;
+}
+
+.single__product-tabs__container {
+  display: block;
+}
+
+.single-product__tabs-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+
+.single-product__tabs-btn {
+  border: none;
+  float: none;
+  height: 50px;
+  line-height: 50px;
+  display: inline-block;
+  vertical-align: top;
+  font-size: 153.846%;
+  position: relative;
+
+}
+
+.single-product-btn__link {
+  background: 0 0 !important;
+  margin: 0;
+  padding: 0 25px !important;
+  color: #777;
+  transition: all .3s;
+  font-weight: 400;
+  font-family: Bubblegum Sans, cursive;
+}
+
+.single-product-btn__link:hover {
+  color: #F94073;
+}
+
+.tabs-title {}
 
 .top__container {
   max-width: 1700px;
@@ -1697,16 +1812,17 @@ body {
 }
 
 .about__prev {
-  background-image: url('../images/about-bg.jpg');
+  background-image: url('../images/bg-breadcrumbs.webp');
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center;
   background-size: cover;
   text-align: center;
-  padding: 160px 0;
+  padding: 80px 0;
 }
 
 .about__prev-title {
-  color: #151515;
+  font-family: Bubblegum Sans, cursive;
+  color: #2d3054;
   font-size: 60px;
   line-height: 80px;
 }
@@ -1716,12 +1832,14 @@ body {
 }
 
 .about__title {
-  color: #151515;
-  font-size: 36px;
-  line-height: 60px;
-  padding-bottom: 22px;
-  margin-bottom: 22px;
-  position: relative;
+  font-family: Bubblegum Sans, cursive;
+  font-size: 307.69%;
+  color: #2d3054;
+  line-height: 48px;
+  padding-bottom: 17px;
+  margin-bottom: 35px;
+  font-weight: 400;
+  text-transform: capitalize;
 }
 
 .about__title::after {
@@ -1731,7 +1849,7 @@ body {
   left: 0;
   width: 200px;
   height: 1px;
-  background-color: #6D7278;
+  background-color: #2d3054;
 }
 
 .about__text {
@@ -1742,15 +1860,57 @@ body {
   margin-bottom: 30px;
 }
 
-.about__popup {
-  background-image: url('../images/popup-bg.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-  min-height: 414px;
+.about-service {
+  margin-bottom: 50px;
+}
+
+.about-service__title {
+  font-family: Bubblegum Sans, cursive;
+  font-size: 307.69%;
+  color: #2d3054;
+  line-height: 48px;
+  padding-bottom: 17px;
+  margin-bottom: 35px;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+.about-service__items {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+}
+
+.about-service__item {}
+
+.about-service__item-text {
+  max-width: 700px;
+  font-size: 16px;
+  line-height: 18px;
+}
+
+.about-service__item-title {
+  font-family: Bubblegum Sans, cursive;
+  font-size: 21px;
+  line-height: 24px;
+  color: #2d3054;
+  padding: 25px 0 10px;
+}
+
+.about-service__sig {
+  padding-top: 30px;
+}
+
+.about-service__sig-name {
+  color: #2d3054;
+  font-weight: 700;
+  font-size: 19px;
+  line-height: 21px;
+}
+
+.about-service__sig-name span {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 17px;
 }
 
 .works {
@@ -1773,18 +1933,22 @@ body {
 }
 
 .works__title {
-  color: #151515;
-  font-size: 36px;
-  line-height: 60px;
-  margin-bottom: 30px;
-
+  font-family: Bubblegum Sans, cursive;
+  font-size: 307.69%;
+  color: #2d3054;
+  line-height: 48px;
+  padding-bottom: 17px;
+  margin-bottom: 35px;
+  font-weight: 400;
+  text-transform: capitalize;
 }
 
 .works__item-title {
-  color: #151515;
+  font-family: Bubblegum Sans, cursive;
   font-size: 21px;
   line-height: 24px;
-  font-weight: 600;
+  color: #2d3054;
+  padding: 25px 0 10px;
   margin-bottom: 20px;
 }
 
@@ -1821,7 +1985,7 @@ body {
 }
 
 .team__item-job {
-  color: #000;
+  color: #2d3054;
   font-size: 21px;
   line-height: 22px;
   font-weight: 700;
