--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -1106,8 +1106,89 @@ body {
   border-width: 0 1px;
 }
 
+.blog {
+  padding: 120px 0 105px;
+}
 
-/* ==============страница с каталогом================ */
+.blog__title {
+  padding-top: 15px;
+  font-family: Bubblegum Sans, cursive;
+  font-size: 40px;
+  line-height: 46px;
+  color: #2d3054;
+  position: relative;
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+.blog__inner {}
+
+.blog__items {
+  display: flex;
+}
+
+.blog__item {
+  display: flex;
+  flex-direction: column;
+  max-width: 370px;
+}
+
+.blog__image img{
+  height: 288px;
+  object-fit: cover;
+
+}
+
+.blog__item-content {}
+
+.blog__item-category {
+  margin-right: 20px;
+}
+
+.blog__item-title {
+  color: #2d3054;
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+.blog__item-info {
+  display: flex;
+  align-items: center;
+}
+
+.blog__item-date {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.blog__item-author {
+  margin-right: 20px;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.blog__item-btn {
+  font-weight: 500;
+  color: #2d3054;
+  line-height: 24px;
+  position: relative;
+  transition: all .3s;
+}
+
+.blog__item-btn:hover {
+  color: #F94073;
+}
+
+
+/* ==============страница с каталогом================
+=====================================================
+=========================================================
+========================================================== */
+
+
+
 
 
 .shop {
@@ -1325,7 +1406,14 @@ body {
 
 
 
-/*========= single product========== */
+/*========= single product========== 
+====================================================
+=======================================================
+==========================================================*/
+
+
+
+
 
 .single-product-tabs {
   margin: 88px 0 34px;
@@ -1645,7 +1733,10 @@ body {
 }
 
 
-/*============= страниа контакты ================*/
+/*============= страниа контакты ================
+=================================================
+==================================================
+=================================================*/
 
 .top {
   max-width: 1700px;
@@ -1822,7 +1913,12 @@ body {
 }
 
 
-/* ======================page about============================== */
+/* ======================page about============================== 
+=================================================================
+=================================================================
+===================================================================*/
+
+
 
 .about {
   margin-bottom: 100px;
@@ -2018,7 +2114,10 @@ body {
 
 
 
-/* ===================blog page=================== */
+/* ===================blog page=================== 
+===================================================
+====================================================
+=====================================================*/
 
 .blog-page {
   padding: 120px 0 60px;
@@ -2056,7 +2155,7 @@ body {
 
 .blog-page__item-title {
   font-weight: 400;
-  font-family: Bubblegum Sans,cursive;
+  font-family: Bubblegum Sans, cursive;
   margin: 10px 0 15px;
   font-size: 246.153%;
   line-height: 38px;
@@ -2075,13 +2174,13 @@ body {
 
 .blog-page__item-btn {
   padding: 10px 31px;
-    border: 1px solid #2d3054;
-    border-radius: 23px;
-    -moz-border-radius: 23px;
-    -webkit-border-radius: 23px;
-    text-transform: capitalize;
-    color: #2d3054;
-    transition: all .3s;
+  border: 1px solid #2d3054;
+  border-radius: 23px;
+  -moz-border-radius: 23px;
+  -webkit-border-radius: 23px;
+  text-transform: capitalize;
+  color: #2d3054;
+  transition: all .3s;
 }
 
 .blog-page__item-btn:hover {
@@ -2177,65 +2276,6 @@ body {
   margin: 0 8px;
 }
 
-.latest-post {
-  padding: 35px 30px 40px;
-  border: 1px solid #ececec;
-  margin-bottom: 40px;
-}
-
-.latest-post__title {
-  color: #29282d;
-  text-transform: uppercase;
-  font-size: 22px;
-  margin-bottom: 35px;
-}
-
-.latest-post__item {
-  margin-bottom: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-
-.latest-post__img-link {
-  display: block;
-  margin-right: 20px;
-  min-width: 80px;
-}
-
-.latest-post__img {
-  width: 80px;
-  height: 80px;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
-.latest-post__box {}
-
-.latest-post__title-link {
-  font-size: 18px;
-  color: #29282d;
-  line-height: 28px;
-}
-
-.latest-post__box-title {}
-
-.latest-post__date {
-  padding-left: 26px;
-  position: relative;
-}
-
-.latest-post__date::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 5px;
-  background-image: url(../images/icons/calendar.svg);
-  width: 16px;
-  height: 16px;
-}
-
 .filter-category {}
 
 .filter-category__form {}
@@ -2284,3 +2324,64 @@ body {
   border: 1px solid #8d8d8d;
   padding: 10px 20px;
 }
+
+
+
+
+/* ===============blog one=============== */
+
+.blog-one {
+  padding: 120px 0 60px;
+}
+
+
+.blog-one__inner {
+  display: flex;
+
+}
+
+.blog-one__content {
+  width: 900px;
+  margin-left: 30px;
+}
+
+.blog-one__aside {
+  width: 250px;
+}
+
+.blog-one__item {
+
+}
+
+.blog-one__image img{
+  margin-bottom: 30px;
+}
+
+.blog-one__item-content {}
+
+.blog-one__item-category {}
+
+.blog-one__item-title {
+  font-weight: 400;
+  font-family: Bubblegum Sans, cursive;
+  margin: 10px 0 15px;
+  font-size: 246.153%;
+  line-height: 38px;
+  color: #2d3054;
+}
+
+.blog-one__item-info {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.blog-one__item-date__container {
+  display: flex;
+  align-items: center;
+}
+
+.blog-one__item-author {}
+
+.blog-one__item-text {}
