include cart templates

--- a/sunline/main/templates/main/index.html
+++ b/sunline/main/templates/main/index.html
@@ -19,8 +19,8 @@
               </h5>
             </div>
             <div class="">
-              <a class="top-slider__link top-slider__link--shop" href="#">Shop Now</a>
-              <a class="top-slider__link top-slider__link--contact" href="#">Contact Us</a>
+              <a class="top-slider__link top-slider__link--shop" href=" ">Shop Now</a>
+              <a class="top-slider__link top-slider__link--contact" href="{% url "contacts:contacts" %} ">Contact Us</a>
             </div>
           </div>
         </div>
@@ -37,8 +37,8 @@
               </h5>
             </div>
             <div class="">
-              <a class="top-slider__link top-slider__link--shop" href="#">Shop Now</a>
-              <a class="top-slider__link top-slider__link--contact" href="#">Contact Us</a>
+              <a class="top-slider__link top-slider__link--shop" href=" ">Shop Now</a>
+              <a class="top-slider__link top-slider__link--contact" href=" {% url "contacts:contacts" %} ">Contact Us</a>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
           <div class="banner__item-info">
             <h4 class="banner__item-title">Organic food for Pets</h4>
             <p class="banner__item-info"></p>
-            <a class="banner__item-link" href="">Shop Now</a>
+            <a class="banner__link" href="">Shop Now</a>
           </div>
         </div>
 
@@ -117,7 +117,7 @@
           <div class="banner__item-info">
             <h4 class="banner__item-title">Organic food for Pets</h4>
             <p class="banner__item-info"></p>
-            <a class="banner__item-link" href="">Shop Now</a>
+            <a class="banner__link" href="">Shop Now</a>
           </div>
         </div>
       </div>
