--- a/sunline/templates/base.html
+++ b/sunline/templates/base.html
@@ -92,7 +92,7 @@
                         </a>
                     </li>
                     <li class="menu__list-item">
-                        <a class="menu__list-link" href="">
+                        <a class="menu__list-link" href=" {% url 'user:users_cart' %} ">
                             <img src=" {% static 'deps/icons/cart.svg' %} " alt="">
                             <span class="menu-list__num">3</span>
                         </a>
