--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -180,6 +180,38 @@ body {
 }
 
 
+.form {
+  display: flex;
+  justify-content: center;
+  padding-right: 20px;
+}
+
+.form__input {
+  height: 44px;
+  border-radius: 22px 0 0 22px;
+  border: none;
+  width: 100%;
+  padding: 10px 18px;
+}
+
+.form__input::placeholder {
+  color: #fff;
+  font-size: 18px;
+}
+
+.form__input-btn {
+  background-color: #F94073;
+  min-width: unset;
+  height: 44px;
+  padding: 0 30px;
+  border-radius: 0 22px 22px 0;
+  transition: .1s;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+
 /* ============= end header styles========== */
 
 
@@ -363,48 +395,6 @@ body {
 .top-slider__link--contact {
   background-color: #2d3054;
 }
-
-
-
-
-
-
-
-
-
-
-.form {
-  display: flex;
-  justify-content: center;
-  padding-right: 20px;
-}
-
-.form__input {
-  padding: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.form__input::placeholder {
-  color: #fff;
-  font-size: 18px;
-}
-
-.form__input-btn {
-  background: #000;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 8px;
-  text-transform: uppercase;
-  color: white;
-  border-left: none;
-  font-size: 16px;
-  font-family: sans-serif;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  cursor: pointer;
-}
-
 
 
 
@@ -722,9 +712,10 @@ body {
   line-height: 42px;
   color: #fff;
   font-weight: 400;
+  margin-bottom: 10px;
 }
 
-.banner__item-link {
+.banner__link {
   display: inline-block;
   padding: 10px 38px;
   border-radius: 22px;
@@ -734,7 +725,7 @@ body {
   transition: .4s;
 }
 
-.banner__item-link:hover {
+.banner__link:hover {
   background-color: #dc3545;
 }
 
@@ -1133,7 +1124,7 @@ body {
   max-width: 370px;
 }
 
-.blog__image img{
+.blog__image img {
   height: 288px;
   object-fit: cover;
 
@@ -2349,11 +2340,9 @@ body {
   width: 250px;
 }
 
-.blog-one__item {
+.blog-one__item {}
 
-}
-
-.blog-one__image img{
+.blog-one__image img {
   margin-bottom: 30px;
 }
 
@@ -2385,3 +2374,197 @@ body {
 .blog-one__item-author {}
 
 .blog-one__item-text {}
+
+
+
+
+
+
+
+/* =====================Profile page=====================
+===========================================================
+============================================================
+=================================================================== */
+
+.profile {
+  padding: 120px 0 60px;
+}
+
+.profile__form {
+  background: #2d3054;
+  padding: 30px 30px 40px;
+}
+
+.profile__inner {
+  display: flex;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+
+.profile__title {
+  font-family: Bubblegum Sans, cursive;
+  font-size: 307.69%;
+  color: #2d3054;
+  line-height: 48px;
+  padding-bottom: 17px;
+  margin-bottom: 35px;
+  font-weight: 400;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.profile__form-items {}
+
+.profile__form-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-label {
+  color: #fff;
+  font-size: 16px;
+  line-height: 17px;
+}
+
+.form-label span {
+  color: #F94073;
+}
+
+.profile__form-input {
+  background-color: #fff;
+  border: 1px solid;
+  color: #666666;
+  border-radius: 22px;
+  padding: 13px 18px;
+  margin-bottom: 30px;
+}
+
+.profile__form-image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.profile__avatar {
+  margin-bottom: 10px;
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  background-position: center;
+}
+
+
+.profile__form-btn {
+  background: #F94073;
+  color: #fff;
+  border: none;
+  border-radius: 23px;
+  font-weight: 400;
+  font-size: 13px;
+  padding: 10px 40px;
+  text-transform: capitalize;
+  line-height: 24px;
+}
+
+
+
+.cart__title {
+  font-size: 35px;
+  line-height: 36px;
+  color: #2d3054;
+  padding: 25px 0 10px;
+}
+
+
+
+.orders__title {
+  font-size: 35px;
+  line-height: 36px;
+  color: #2d3054;
+  padding: 25px 0 10px;
+}
+
+.accordion {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+
+
+/*====================== Authorization ======================
+=====================================================
+===============================================
+========================================================*/
+
+.auth {
+  padding: 120px 0 60px;
+}
+
+.auth__inner {
+  /* padding: 30px 30px 40px;
+  border: 1px solid #6c757d; */
+}
+
+.auth__title {
+  color: #6c757d;
+  font-size: 40px;
+  line-height: 44px;
+  font-family: Bubblegum Sans, cursive;
+  text-align: center;
+}
+
+.auth__subtitle {
+  margin: 0 auto;
+  text-align: center;
+  max-width: 540px;
+  margin-bottom: 15px;
+}
+
+.auth-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.auth-input {
+  background-color: #fff;
+  border: 1px solid;
+  color: #666666;
+  border-radius: 22px;
+  padding: 13px 18px;
+  margin-bottom: 30px;
+}
+
+.auth-form__btn {
+  background: #F94073;
+  color: #fff;
+  border-radius: 23px;
+  font-weight: 400;
+  font-size: 13px;
+  padding: 10px 40px;
+  text-transform: capitalize;
+  line-height: 24px;
+  border: none;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+
+.auth__sub-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.auth__sub-link__forgot {
+  color: #6c757d;
+}
+
+
+.auth__sub-link__create {
+  color: #F94073;
+}
