--- a/sunline/users/templates/users/login.html
+++ b/sunline/users/templates/users/login.html
@@ -4,31 +4,25 @@
 
 {% block block__content %}
 
-        <!-- Контент -->
-        <div class="container">
-            <div class="row mt-1">
-                <div class="col-lg-2">
-                    <!-- Пустой блок на усмотрение -->
-                </div>
-                <div class="col-lg-10">
-                    <!-- Контент на странице -->
-                    <div class="row">
-                        <div class="container mt-5">
-                            <div class="row justify-content-center">
-                                <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
-                                    <h2 class="text-center mb-4">Авторизация</h2>
-                                    <form action=" {% url "user:login"%} " method="post" >
+                        <div class="auth">
+                            <div class="container">
+                                <div class="auth__inner">
+                                    <h2 class="auth__title">Authorization</h2>
+                                    <p class="auth__subtitle">
+                                        Please enter your email and password below to access your account
+                                    </p>
+                                    <form class="auth-form" action=" {% url "user:login"%} " method="post" >
                                         {% csrf_token %}
                                         {% if request.GET.next %}
-                                            <input type="hidden" name="next" value={{request.GET.next}}>
+                                            <input class="auth-input" type="hidden" name="next" value={{request.GET.next}}>
                                         {% endif %} 
                                         <div class="mb-3">
-                                            <label for="id_username" class="form-label">Username</label>
-                                            <input type="text" class="form-control" value=" {% if form.username.value %} {{form.username.value}} {% endif %} " name="username" id="id_username" placeholder="Enter your username" required>
+                                            <label for="id_username" class="form-label" style="display: none;">Username</label>
+                                            <input  type="text" class="form-control  auth-input" value=" {% if form.username.value %} {{form.username.value}} {% endif %} " name="username" id="id_username" placeholder="Enter your username" required>
                                         </div>
                                         <div class="mb-3">
-                                            <label for="id_password" class="form-label">Password</label>
-                                            <input type="password" class="form-control" name="password" id="id_password" placeholder="Enter your password" required>
+                                            <label for="id_password" class="form-label" style="display: none;">Password</label>
+                                            <input  type="password" class="form-control auth-input" name="password" id="id_password" placeholder="Enter your password" required>
                                         </div>
 
                                         {% comment %} <div class="mb-3">
@@ -39,13 +33,14 @@
                                             <label for="password" class="form-label">Пароль</label>
                                             <input type="password" class="form-control" id="password" placeholder="Введите ваш пароль" required>
                                         </div>{% endcomment %}
-                                        <button type="submit" class="btn btn-dark btn-block">Войти</button> 
+                                        <button type="submit" class="btn btn-dark btn-block auth-form__btn">Sign In</button> 
                                     </form>
-                                    <div class="mt-3">
-                                        <a href="#">Забыли пароль?</a> | <a href=" {% url "users:registration" %} ">Создать аккаунт</a>
+                                    <div class="auth__sub-link">
+                                        <a class="auth__sub-link__forgot" href="#">Forgot Password?</a>
+                                         <a class="auth__sub-link__create" href=" {% url "users:registration" %} ">Create Account</a>
                                     </div>
-                                    <hr>
-                                    <div class="text-center">
+
+                                    {% comment %} <div class="text-center">
                                         <p>Или авторизуйтесь через:</p>
                                         <a href="#" class="btn btn-dark">
                                             <img class="mx-1" src=" {% static 'deps/icons/google.svg' %} " alt="Catalog Icon" width="16" height="16">
@@ -59,14 +54,11 @@
                                             <img class="mx-1" src=" {% static 'deps/icons/github.svg' %} " alt="Catalog Icon" width="16" height="16">
                                             GitHub
                                         </a>
-                                    </div>
+                                    </div> {% endcomment %}
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </section>
 
 
