--- a/sunline/users/templates/users/profile.html
+++ b/sunline/users/templates/users/profile.html
@@ -4,7 +4,183 @@
 {% block block__content %}
 
 
-        <!-- Контент -->
+<section class="profile">
+    <div class="container">
+        <h3 class="profile__title">User Profile</h3>
+        <div class="profile__inner">
+
+
+            <form class="profile__form" action="{% url "users:profile" %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="profile__form-items">
+                    <div class="profile__form-image">
+                        {% if user.image %}
+                            <img class="profile__avatar" src="{{ user.image.url }}"
+                                alt="Аватар пользователя" class="img-fluid rounded-circle"
+                                >
+                        {% else %}
+                            <img src="{% static "deps/images/baseavatar.jpg" %}"
+                                alt="Аватар пользователя" class="img-fluid rounded-circle"
+                                >
+                        {% endif %}
+                        <input class="profile__form-input" type="file" class="form-control mt-3" id="id_image"
+                            name='image'
+                            accept="image/*">
+                            {% if form.image.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{form.image.errors}}</div>
+                            {% endif %}
+                    </div>
+                    <div class="profile__form-item">
+                        <label for="id_first_name" class="form-label">Name <span>*</span></label>
+                        <input class="profile__form-input" type="text" class="form-control" id="id_first_name"
+                            name="first_name"
+                            placeholder="Введите ваше имя"
+                            value="{{ form.first_name.value }}"
+                            required>
+                            {% if form.first_name.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{form.first_name.errors}}</div>
+                            {% endif %}
+                    </div>
+                    <div class="profile__form-item">
+                        <label for="id_last_name" class="form-label">Surname<span>*</span></label>
+                        <input class="profile__form-input" type="text" class="form-control" id="id_last_name"
+                            name="last_name"
+                            placeholder="Введите вашу фамилию"
+                            value="{{ form.last_name.value }}"
+                            required>
+                            {% if form.last_name.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{form.last_name.errors}}</div>
+                            {% endif %}
+                    </div>
+                    <div class="profile__form-item">
+                        <label for="id_username" class="form-label">Username<span>*</span></label>
+                        <input class="profile__form-input" type="text" class="form-control" id="id_username"
+                            name="username"
+                            placeholder="Введите ваше имя пользователя"
+                            value="{{ form.username.value }}"
+                            required>
+                            {% if form.username.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{form.username.errors}}</div>
+                            {% endif %}
+                    </div>
+                    <div class="profile__form-item">
+                        <label for="id_email" class="form-label">Email<span>*</span></label>
+                        <input class="profile__form-input" type="email" class="form-control" id="id_email"
+                            name="email"
+                            placeholder="Введите ваш email *youremail@example.com"
+                            value="{{ form.email.value }}"
+                            required>
+                            {% if form.email.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">{{form.email.errors}}</div>
+                            {% endif %}
+                    </div>
+                </div>
+                <button class="profile__form-btn" type="submit" class="btn btn-dark">Save</button>
+            </form>
+
+
+
+
+                                            <!-- Корзина -->
+                                            <div class="cart">
+                                                <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
+                                                    <h3 class="cart__title">Cart</h3>
+                                                    <div class="container" id="cart-items-container">
+                                                        <!-- Разметка корзины -->
+                                                        {% include "cart/includes/included_cart.html" %}
+                                                        <!-- Закончилась разметка корзины -->
+                                                    </div>
+                                                    <a class="btn btn-dark" href="../orders/create_order.html">
+                                                        Оформить заказ
+                                                    </a>
+                                                </div>
+                                            </div>
+
+        </div>
+
+
+                                        <!-- Оформленные заказы -->
+                                        <div class="orders">
+                                            <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
+                                                <h3 class="orders__title">My Orders</h3>
+                                                <!-- Разметка заказов -->
+                                                <div class="container">
+                                                    <div class="accordion" id="accordionExample">
+                                                        <div class="accordion-item">
+                                                            <h2 class="accordion-header" id="heading1">
+                                                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                                                                    Заказ № 256 - 09 сентября 2023 9:04 | Статус:<strong class="mx-2"> В обработке</strong>
+                                                                </button>
+                                                            </h2>
+                                                            <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1" data-bs-parent="#accordionExample">
+                                                                <div class="accordion-body">
+                                                                    <table class="table table-dark table-hover">
+                                                                        <thead>
+                                                                            <tr>
+                                                                                <th>Товар</th>
+                                                                                <th>Количество</th>
+                                                                                <th>Цена</th>
+                                                                                <th>Общая стоимость</th>
+                                                                            </tr>
+                                                                        </thead>
+                                                                        <tbody>
+                                                                            <tr>
+                                                                                <td><a class="text-white" href="#">Комплект стол и три стула</a></td>
+                                                                                <td>1</td>
+                                                                                <td>255.00 $</td>
+                                                                                <td>255.00 $</td>
+                                                                                
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
+                                                                    <div class="d-flex justify-content-between">
+                                                                        <p><strong>Итого:</strong></p>
+                                                                        <p><strong>255.00 $</strong></p>
+        
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="accordion-item">
+                                                            <h2 class="accordion-header" id="heading2">
+                                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                                                                    Заказ № 248 - 01 августа 2023 11:28 | Статус: <strong>Получен</strong>
+                                                                </button>
+                                                            </h2>
+                                                            <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
+                                                                <div class="accordion-body">
+                                                                    <table class="table table-dark table-hover">
+                                                                        <thead>
+                                                                            <tr>
+                                                                                <th>Товар</th>
+                                                                                <th>Количество</th>
+                                                                                <th>Цена</th>
+                                                                                <th>Общая стоимость</th>
+                                                                            </tr>
+                                                                        </thead>
+                                                                        <tbody>
+                                                                            <tr>
+                                                                                <td><a class="text-white" href="#">Стул офисный</a></td>
+                                                                                <td>2</td>
+                                                                                <td>30.00 $</td>
+                                                                                <td>60.00 $</td>
+                                                                                
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- Закончилась разметка заказов -->
+
+
+    </div>
+</section>
+
+
+        {% comment %} <!-- Контент -->
         <div class="row">
             <div class="container mt-5">
                 <div class="row">
@@ -12,6 +188,7 @@
                     <div class="col-md-5">
                         <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                             <h3 class="text-center mb-4">Профиль пользователя</h3>
+
                             <form action="{% url "users:profile" %}" method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="row">
@@ -79,8 +256,12 @@
                                 </div>
                                 <button type="submit" class="btn btn-dark">Сохранить</button>
                             </form>
+
                         </div>
                     </div>
+
+
+
                                 <!-- Корзина -->
                                 <div class="col-md-7">
                                     <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
@@ -135,6 +316,9 @@
                                         </a>
                                     </div>
                                 </div>
+
+
+
                                 <!-- Оформленные заказы -->
                                 <div class="col-md-12">
                                     <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
@@ -218,7 +402,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> {% endcomment %}
 
 
 {% endblock  %}
