--- a/sunline/templates/base.html
+++ b/sunline/templates/base.html
@@ -1,6 +1,10 @@
 {% load static %}
 {% load goods_tags %}
 
+{% load carts_tags %}
+
+{% user_carts request as carts  %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -94,7 +98,7 @@
                     <li class="menu__list-item">
                         <a class="menu__list-link" href=" {% url 'user:users_cart' %} ">
                             <img src=" {% static 'deps/icons/cart.svg' %} " alt="">
-                            <span class="menu-list__num">3</span>
+                            <span class="menu-list__num"> {{carts.total_quantity}} </span>
                         </a>
                     </li>
                 </nav>
