--- a/sunline/goods/templates/goods/catalog.html
+++ b/sunline/goods/templates/goods/catalog.html
@@ -157,7 +157,7 @@
                       {% endif %}
                       {% endautoescape %}
                     </p> {% endcomment %}
-                    <a href="#" class="btn add-to-cart">Add to cart</a>
+                    <a href=" {% url 'cart:cart_add' product.slug %} " class="btn add-to-cart">Add to cart</a>
                   </div>
                 </div>
               </div>
